# audioplayer

./: .gitignore  CMakeLists.txt  README.md  build-android.sh
android/: AndroidManifest.xml  audioplayer.keystore  build.gradle
include/: AudioPlayer.hpp  MainWindow.hpp  PlaylistDelegate.hpp  SeekSlider.hpp
resources/: styles.qss
src/: AudioPlayer.cpp  MainWindow.cpp  PlaylistDelegate.cpp  SeekSlider.cpp  main.cpp
